# vendee-globe-dashboard

./: README.md  pyproject.toml
src/vendee_globe_dashboard/: __init__.py  app.py  constants.py  dashboard.py  utils.py
src/vendee_globe_dashboard/.streamlit/: config.toml
