[project]
name = "vendee-globe-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Vienne", email = "129849233+vienneraphael@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
vendee-globe-dashboard = "vendee_globe_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
